--- a/package.json
+++ b/package.json
@@ -5,11 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "debug": "node --inspect node_modules/@vue/cli-service/bin/vue-cli-service.js serve"
   },
   "dependencies": {
+    "@babel/generator": "^7.26.9",
+    "@babel/parser": "^7.26.9",
+    "@babel/traverse": "^7.26.9",
+    "@vue/compiler-core": "^3.5.13",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "loader-utils": "^3.3.1",
+    "schema-utils": "^4.3.0",
+    "vue": "^3.2.13",
+    "vue-i18n": "^9.14.2",
+    "vue-loader": "^17.4.2",
+    "vue-template-compiler": "^2.7.16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
